# humansintheloop-dev-workflow-and-tools

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  CODEBASE.md  LICENSE.md  README.adoc  codescene-precommit.sh  install-marketplace.sh  install-plugin.sh  link-dotfiles.sh  pre-commit-install.sh  pre-commit.sh  pyproject.toml  pyrightconfig.json  pytest.ini  reinstall-plugin.sh  test-recording.sh  uninstall-plugin.sh  validate-plugin-installation.sh
.claude-plugin/: marketplace.json  plugin.json
commands/: claude-issue-report.md  idea-brainstorm.md  idea-create-implementation-plan-from-stories.md  idea-create-spec.md
config-files/: CLAUDE.md  settings.local.json
design-pattern-catalog/: index.md
dev-scripts/: setup-project.sh
docs/: greenfield-development-workflow.adoc  idea-to-code-workflow.adoc
hooks/: block-git-dash-c.js  block-git-dash-c.test.js  debug-hook.js  enforce-bash-conventions.js  enforce-bash-conventions.test.js  issue-session-tagger.js  session-recorder.js  session-recorder.test.js
prompt-templates/: analyze-sessions.md  brainstorm-idea.md  create-design-doc.md  create-implementation-plan.md  create-spec.md  implement-plan.md  review-issues.md  revise-plan.md  update-claude-files-from-project.md  wt-handle-feedback.md
scripts/: make-minor-release.sh  trigger-minor-release.sh
simplify-worktree-branching/: simplify-worktree-branching-implement-config.yaml  simplify-worktree-branching-plan.md  simplify-worktree-branching-spec.md
test-scripts/: analyze-claude-activity.sh  test-all-with-isolarium.sh  test-all.sh  (+21 more)
(+798 files in other folders)
