[project]
name = "i2code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click", "GitPython"]

[project.scripts]
i2code = "i2code.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-subtests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/i2code"]
