[project]
name = "i2code"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = ["click", "GitPython", "Jinja2"]

[project.scripts]
i2code = "i2code.cli:main"

[dependency-groups]
dev = ["pytest", "pytest-mock", "pytest-subtests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "PLC0415"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLC0415"]

[tool.hatch.build.targets.wheel]
packages = ["src/i2code"]

[tool.hatch.build.targets.wheel.force-include]
"src/i2code/scripts" = "i2code/scripts"
"src/i2code/prompt-templates" = "i2code/prompt-templates"
